@@ -40,6 +40,19 @@ roc.formula <- function (formula, data, ...) {
   # Keep the standard arguments and run them in model.frame
   temp <- Call[c(1,indx)]  
   temp[[1]] <- as.name('model.frame')
+  # Only na.pass and na.fail should be used
+  if (indx[5] != 0) {
+  	na.action.value = as.character(Call[indx[5]])
+  	if (! as.character(Call[indx[5]]) %in% c("na.pass", "na.fail")) {
+  		warning(paste0(sprintf("Value %s of na.action is not supported ", na.action.value),
+  					   "and will break pairing in roc.test and are.paired. ",
+  					   "Please use 'na.rm = TRUE' instead."))
+  	}
+  }
+  else {
+  	temp$na.action = "na.pass"
+  }
+  # Run model.frame
   m <- eval(temp, parent.frame())
   
   if (!is.null(model.weights(m))) stop("weights are not supported")
